Fixes sticky footer covering content

--- a/client/src/app/App.css
+++ b/client/src/app/App.css
@@ -1,3 +1,4 @@
 .app-content {
-  margin-top: 64px;   
+  margin-top: 64px;
+  margin-bottom: 100px;
 }
